--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - image: cimg/node:18.16
     steps:
       - checkout:
-          path: ~/JituExchange
+          path: ~/JituExchange/backend
       - node/install-packages:
           pkg-manager: npm
       - run: npm run build
