--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - .
+            - backend/
 
   test-backend:
     working_directory: ~/JituExchange/backend
@@ -55,7 +55,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - .
+            - frontend/
   test-frontend:
     working_directory: ~/JituExchange/frontend
     docker:
