--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
       - image: cimg/node:18.16
     steps:
       - checkout
-      - attach_workspace:
-          at: .
+      # - attach_workspace:
+      #     at: .
       - node/install-packages:
           pkg-manager: npm
       - run: npm test
@@ -69,8 +69,8 @@ jobs:
             chromedriver --version
           name: Check install
       - checkout
-      - attach_workspace:
-          at: .
+      # - attach_workspace:
+      #     at: .
       - node/install-packages:
           pkg-manager: npm
       - run: npm test
@@ -82,13 +82,17 @@ jobs:
 
 # Orchestrate our job run sequence
 workflows:
-  backend_frontend:
+  build_and_test_backend:
     jobs:
-      - build-backend
-      - test-backend:
-          requires:
-            - build-backend
-      - build-frontend
-      - test-frontend:
-          requires:
-            - build-frontend
+      - test-backend
+      # - build-backend
+      # - test-backend:
+      #     requires:
+      #       - build-backend
+  build_and_test_frontend:
+    jobs:
+      - test-frontend
+      # - build-frontend
+      # - test-frontend:
+      #     requires:
+      #       - build-frontend
