attempt #14 fix working directory and checkout

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,7 @@ jobs:
     docker:
       - image: cimg/node:18.16
     steps:
-      - checkout:
-          path: ~/JituExchangeBackend
+      - checkout
       # - attach_workspace:
       #     at: .
       - node/install-packages:
@@ -69,8 +68,7 @@ jobs:
             google-chrome --version
             chromedriver --version
           name: Check install
-      - checkout:
-          path: ~/JituExchangeFrontend
+      - checkout
       # - attach_workspace:
       #     at: .
       - node/install-packages:
