--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
       - checkout
       # - attach_workspace:
       #     at: .
-      - node/install-packages:
-          pkg-manager: npm
+      - run:
+          command: npm install
           working_directory: ~/JituExchange/frontend
       - run:
           command: npm test
@@ -52,8 +52,9 @@ jobs:
           path: ~/JituExchange
       - attach_workspace:
           at: .
-      - node/install-packages:
-          pkg-manager: npm
+      - run:
+          command: npm install
+          working_directory: ~/JituExchange/frontend
       - run: npm install
       - persist_to_workspace:
           root: .
