--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           pkg-manager: npm
       - run:
           command: npm test
-          working_directory: ~/JituExchange/frontend
+          working_directory: ~/JituExchange/backend
       - store_artifacts:
           path: backend/coverage/clover.xml
           destination: ./clover-backend.xml
