--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       # - attach_workspace:
       #     at: .
       - checkout:
-          path: ~/JituExchange/BackendCopy
+          path: ~/JituExchange/backend
       - node/install-packages:
           pkg-manager: npm
       - run:
@@ -69,7 +69,7 @@ jobs:
             chromedriver --version
           name: Check install
       - checkout:
-          path: ~/JituExchange/FrontendCopy
+          path: ~/JituExchange/frontend
       # - attach_workspace:
       #     at: .
       - node/install-packages:
