attempt #19 fix working directory and checkout

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,8 +68,7 @@ jobs:
             google-chrome --version
             chromedriver --version
           name: Check install
-      - checkout:
-          path: ~/JituFrontend
+      - checkout
       # - attach_workspace:
       #     at: .
       - node/install-packages:
