--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,8 +71,9 @@ jobs:
       - checkout
       # - attach_workspace:
       #     at: .
-      - node/install-packages:
-          pkg-manager: npm
+      - run:
+          command: npm install
+          working_directory: ~/JituExchange/frontend
       - run:
           command: npm test
           working_directory: ~/JituExchange/frontend
