--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,19 @@ orbs:
 
 # Define the jobs we want to run for this project
 jobs:
+  clone:
+    docker:
+      - image: cimg/node:18.16
+    steps:
+      - checkout:
+          path: ~/JituExchange
+      - attach_workspace:
+          at: .
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
   build-backend:
     working_directory: ~/JituExchange/backend
     docker:
@@ -24,19 +37,19 @@ jobs:
             - backend/
 
   test-backend:
-    working_directory: ~/JituBackend/backend
+    working_directory: ~/JituExchange/backend
     docker:
       - image: cimg/node:18.16
     steps:
       # - attach_workspace:
       #     at: .
-      - checkout:
-          path: ~/JituBackend
+      # - checkout:
+      #     path: ~/JituBackend
       - node/install-packages:
           pkg-manager: npm
       - run:
           command: npm test
-          working_directory: ~/JituBackend/backend
+          working_directory: ~/JituExchange/backend
       - store_artifacts:
           path: backend/coverage/clover.xml
           destination: ./clover-backend.xml
@@ -68,8 +81,8 @@ jobs:
             google-chrome --version
             chromedriver --version
           name: Check install
-      - checkout:
-          path: ~/JituExchange
+      # - checkout:
+      #     path: ~/JituExchange
       # - attach_workspace:
       #     at: .
       - run:
@@ -86,17 +99,18 @@ jobs:
 
 # Orchestrate our job run sequence
 workflows:
+  clone:
+    jobs:
+      - clone
   build_and_test_backend:
     jobs:
-      - test-backend
       # - build-backend
-      # - test-backend:
-      #     requires:
-      #       - build-backend
+      - test-backend:
+          requires:
+            - clone
   build_and_test_frontend:
     jobs:
-      - test-frontend
       # - build-frontend
-      # - test-frontend:
-      #     requires:
-      #       - build-frontend
+      - test-frontend:
+          requires:
+            - clone
