--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       - image: cimg/node:18.16
     steps:
       - attach_workspace:
-          at: ~/JituExchange/backend
+          at: ~/JituExchange
       # - checkout:
       #     path: ~/JituBackend
       - node/install-packages:
@@ -81,7 +81,7 @@ jobs:
       # - checkout:
       #     path: ~/JituExchange
       - attach_workspace:
-          at: ~/JituExchange/frontend
+          at: ~/JituExchange
       - run:
           command: npm install
           working_directory: ~/JituExchange/frontend
