--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadless"
+    "test:run": "ng test --no-watch --no-progress --browsers ChromeHeadless --code-coverage",
+    "test:coverage": "istanbul report --dir coverage --include coverage/**/*.json --report cobertura",
+    "test": "concurrently npm:test:*"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +29,8 @@
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "concurrently": "^8.1.0",
+    "istanbul": "^0.4.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
