--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test:run": "ng test --no-watch --no-progress --browsers ChromeHeadless --code-coverage",
-    "test:coverage": "istanbul report --dir coverage --include coverage/**/*.json --report clover",
-    "test": "concurrently npm:test:*"
+    "test": "ng test --karma-config karma.conf.js --code-coverage"
   },
   "private": true,
   "dependencies": {
@@ -31,10 +29,14 @@
     "@types/jasmine": "~4.3.0",
     "concurrently": "^8.1.0",
     "istanbul": "^0.4.5",
+    "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.1.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.0.2"
