--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --karma-config karma.conf.js --code-coverage"
+    "test": "ng test --karma-config karma.conf.js --code-coverage --browsers ChromeHeadless --no-watch --no-progress"
   },
   "private": true,
   "dependencies": {
