setup ngrx and in memory db

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --karma-config karma.conf.js --code-coverage --browsers ChromeHeadless --no-watch --no-progress"
+    "test": "ng test --karma-config karma.conf.js --code-coverage --browsers ChromeHeadless --no-watch --no-progress",
+    "dev": "ng serve --configuration development --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngrx/store": "^16.0.1",
+    "@ngrx/store-devtools": "^16.0.1",
+    "angular-in-memory-web-api": "^0.16.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
