--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -22,7 +22,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
+              }
             ],
             "styles": [
               "src/styles.css"
@@ -84,12 +89,41 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
+              }
             ],
             "styles": [
               "src/styles.css"
             ],
             "scripts": []
+          }
+        },
+        "ionic-cordova-serve": {
+          "builder": "@ionic/angular-toolkit:cordova-serve",
+          "options": {
+            "cordovaBuildTarget": "JituExchange:ionic-cordova-build",
+            "devServerTarget": "JituExchange:serve"
+          },
+          "configurations": {
+            "production": {
+              "cordovaBuildTarget": "JituExchange:ionic-cordova-build:production",
+              "devServerTarget": "JituExchange:serve:production"
+            }
+          }
+        },
+        "ionic-cordova-build": {
+          "builder": "@ionic/angular-toolkit:cordova-build",
+          "options": {
+            "browserTarget": "JituExchange:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "JituExchange:build:production"
+            }
           }
         }
       }
