--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
+    "dev:build": "tsc -w",
+    "dev:run": "nodemon dist/server.js",
+    "dev": "concurrently npm:dev:*",
     "test": "jest --coverage"
   },
   "keywords": [],
@@ -16,6 +19,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/mssql": "^8.1.2",
+    "@types/uuid": "^9.0.2",
+    "concurrently": "^8.2.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
@@ -24,6 +29,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
-    "mssql": "^9.1.1"
+    "joi": "^17.9.2",
+    "mssql": "^9.1.1",
+    "uuid": "^9.0.0"
   }
 }
