--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.2",
     "@types/mssql": "^8.1.2",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "concurrently": "^8.2.0",
     "jest": "^29.5.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
