--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mssql": "^8.1.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
