--- a/background/package.json
+++ b/background/package.json
@@ -2,11 +2,27 @@
   "name": "jituexchange-background-services",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "cronner.js",
   "scripts": {
+    "cron": "tsc && node dist/cronner",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/ejs": "^3.1.2",
+    "@types/mssql": "^8.1.2",
+    "@types/node": "^20.3.1",
+    "@types/node-cron": "^3.0.7",
+    "@types/nodemailer": "^6.4.8",
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "mssql": "^9.1.1",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.3"
+  }
 }
