--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,19 @@ jobs:
           root: .
           paths:
             - .
+  database:
+    working_directory: ~/JituExchange/database
+    docker:
+      - image: mcr.microsoft.com/mssql/server:2022-latest
+    steps:
+      - checkout:
+        path: ~/JituExchange
+      - attach_workspace:
+        at: .
+      - run:
+        name: setup test database
+        command: bash setup.sh -t
+        working_directory: ~/JituExchange/database
 
   build-backend:
     working_directory: ~/JituExchange/backend
@@ -99,9 +112,12 @@ workflows:
   test:
     jobs:
       - clone
+      - database:
+        requires:
+          - clone
       - test-backend:
           requires:
-            - clone
+            - database
       - test-frontend:
           requires:
             - clone
