--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
           path: ~/JituExchange
       - attach_workspace:
           at: .
+      - run: sudo apt install mssql-tools
       - run:
           name: setup test database
           command: bash setup.sh -t
