attempt #2 fix sudo command not found

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           path: ~/JituExchange
       - attach_workspace:
           at: .
-      - run: sudo apt install mssql-tools
+      # - run: sudo apt install mssql-tools
       - run:
           name: setup test database
           command: bash setup.sh -t
