attempt #3 fix sudo command not found

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,14 @@ jobs:
     working_directory: ~/JituExchange/database
     docker:
       - image: cimg/node:18.16
-      - image: mcr.microsoft.com/mssql-tools
+      # - image: mcr.microsoft.com/mssql-tools
     steps:
       - checkout:
           path: ~/JituExchange
       - attach_workspace:
           at: .
-      # - run: sudo apt install mssql-tools
+      - run: sudo apt update
+      - run: sudo apt install mssql-tools
       - run:
           name: setup test database
           command: bash setup.sh -t
