--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
   database:
     working_directory: ~/JituExchange/database
     docker:
-      - image: cimg/node:18.16
+      - image: cimg/base
       # - image: mcr.microsoft.com/mssql-tools
     steps:
       - checkout:
