--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: sudo apt-get update
-      - run: sudo apt-get install mssql-tools
+      - run: sudo apt-get install -y mssql-server
       - run:
           name: setup test database
           command: bash setup.sh -t
