--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,21 @@
-FROM node:18
+FROM node:18 as build
 
 WORKDIR /frontend
 
-RUN npm install -g @angular/cli
+# RUN npm install -g @angular/cli@16.0.2
 
-COPY package*.json .
+COPY package*.json ./
 
 RUN npm install
 
 COPY . .
 
-# ENV PORT=4200
+RUN npm run build
 
-# EXPOSE $PORT
+FROM nginx:alpine
 
-CMD ["npm", "run", "dev"]
+COPY --from=build /frontend/dist/jitu-exchange /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
