--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registry-type: public
         env:
           AWS_REGION: ${{ env.AWS_REGION }}
 
