--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -15,11 +15,12 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          registry-type: public
-        env:
-          AWS_REGION: ${{ env.AWS_REGION }}
+          # registry-type: public
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
       - name: Build and push Docker images
         id: build-and-push
