--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,7 +20,7 @@ jobs:
           # registry-type: public
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Build and push Docker images
         id: build-and-push
