--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,10 +17,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/configure-aws-credentials@v1
         with:
+          aws-region: "${{ env.AWS_REGION }}"
+        env:
           # registry-type: public
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: "${{ env.AWS_REGION }}"
 
       - name: Build and push Docker images
         id: build-and-push
