--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -18,11 +18,12 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: "${{ env.AWS_REGION }}"
+          role-to-assume: "${{ env.ECS_TASK_EXECUTION_ARN }}"
         env:
           # registry-type: public
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: "${{ env.AWS_REGION }}"
       - name: Build and push Docker images
         id: build-and-push
         uses: docker/build-push-action@v2
