--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,12 +17,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: "${{ env.AWS_REGION }}"
+          aws-region: eu-north-1
         env:
           # registry-type: public
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "${{ env.AWS_REGION }}"
+          AWS_REGION: eu-north-1
       - name: Build and push Docker images
         id: build-and-push
         uses: docker/build-push-action@v2
