--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,12 +17,10 @@ jobs:
         id: login-ecr
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: eu-north-1
-        env:
-          # registry-type: public
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: eu-north-1
+          aws-region: ${{ env.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Build and push Docker images
         id: build-and-push
         uses: docker/build-push-action@v2
